--- a/front-end/front/package.json
+++ b/front-end/front/package.json
@@ -9,12 +9,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-modal": "^3.16.1",
