--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8088
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/first_db
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=root
 
 # ???? ?????? Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
