new post add form and new show page

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -29,3 +29,11 @@ spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
 
+
+
+spring.mail.host=mail.inbox.lv
+spring.mail.port=587
+spring.mail.username=s.osipov@inbox.lv
+spring.mail.password=5!5CjHxBmX
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
