--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -105,6 +105,10 @@
 			<version>0.4.20</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 
